Fixed long lines in output not wrapping

--- a/Client/Shared/CIJobOutputSection.razor.css
+++ b/Client/Shared/CIJobOutputSection.razor.css
@@ -8,7 +8,7 @@
     padding: 0;
     font-family: monospace;
     line-height: 1.08;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .line-number {
